# QuickStatus2

./: .gitignore  CMakeLists.txt  README.md  package.ps1
include/: AutoPopup.h  AutoWidget.h  BasicWidget.h  CalibrationWidget.h  Constants.h  ControlModeWidget.h  FuelWidget.h  MainWindow.h  NTManager.h  NTPopup.h  NetworkTables.h  ShiftWidget.h  ShooterWidget.h  SpacerWidget.h  StatusBar.h  SwerveWidget.h
resources/: Dock.qss  Styles.qrc  icon.icns  resources.qrc  stylesheet.qss
src/: AutoPopup.cpp  AutoWidget.cpp  BasicWidget.cpp  CalibrationWidget.cpp  ControlModeWidget.cpp  FuelWidget.cpp  Main.cpp  MainWindow.cpp  NTManager.cpp  NTPopup.cpp  NetworkTables.cpp  ShiftWidget.cpp  ShooterWidget.cpp  SpacerWidget.cpp  StatusBar.cpp  SwerveWidget.cpp
wpicpp/lib/: wpimath.lib
